<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PricesActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="410dp"
        android:layout_height="172dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="559dp"
        android:contentDescription="@string/hrimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hr" />

    <TextView
        android:id="@+id/tvPricedescp"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/price_list"
        android:textColor="#050505"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="401dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/rentals_per_day_per_item_for_decorations_and_dessert_tables_price_varies_depending_on_design_and_quantity"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPricedescp"
        app:layout_constraintVertical_bias="0.6" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="402dp"
        android:layout_height="419dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="16dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#CAC7C7"
                android:text="@string/chair_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/table_6ft_5_each"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#CAC7C7"
                android:text="@string/table_8ft_7_each"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/sports_bounce_house_100"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#CAC7C7"
                android:text="@string/princess_bounce_house_100"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/slide_bounce_house_140"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#CAC7C7"
                android:text="@string/tent_20ftx20ft_120"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/tent_20ftx30ft_150"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#CAC7C7"
                android:text="@string/tent_20ftx40ft_170"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/tent_lights_10"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#CAC7C7"
                android:text="@string/decorations_100"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="@string/dessert_table_100"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:autoSizeTextType="uniform" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>