<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:contentDescription="@string/_20x302"
    tools:context=".TentsActivity">

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="412dp"
        android:layout_height="203dp"
        android:layout_marginBottom="528dp"
        android:contentDescription="@string/hrimg12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hr" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="230dp"
        android:layout_height="82dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="223dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="426dp"
        android:gravity="center"
        android:text="@string/tents"
        android:textColor="#050505"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="337dp"
        android:layout_height="400dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tent_20ftx20ft_n_fits_up_to_48_people"
                android:textColor="#050505"
                android:textSize="18sp"
                tools:text="Tent 20ftx20ft \n Fits: up to 48 people" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="325dp"
                android:layout_height="214dp"
                android:contentDescription="@string/_20x201"
                app:srcCompat="@drawable/tent_20x20" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:contentDescription="@string/_20x202"
                app:srcCompat="@drawable/tent_20x20_1" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="match_parent"
                android:layout_height="346dp"
                android:contentDescription="@string/_20x203"
                app:srcCompat="@drawable/tent_20x20_2" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tent_20ftx30ft_n_fits_up_to_80_people"
                android:textColor="#050505"
                android:textSize="18sp"
                tools:text="Tent 20ftx30ft \n Fits: up to 80 people" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:contentDescription="@string/_20x301"
                app:srcCompat="@drawable/tent_20x30_2" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/tent23"
                app:srcCompat="@drawable/tent_20x30_3" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:contentDescription="@string/_20x304"
                app:srcCompat="@drawable/tent_20x30_4" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView32"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:contentDescription="@string/_20x305"
                app:srcCompat="@drawable/tent_20x30_5" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tent_20ftx40ft_n_fits_up_to_100_people"
                android:textColor="#050505"
                android:textSize="18sp"
                tools:text="Tent 20ftx40ft \n Fits: up to 100 people" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:contentDescription="@string/_20x401"
                app:srcCompat="@drawable/tent20x40" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView34"
                android:layout_width="match_parent"
                android:layout_height="261dp"
                android:contentDescription="@string/_20x402"
                app:srcCompat="@drawable/tent20x40_2" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="match_parent"
                android:layout_height="214dp"
                android:contentDescription="@string/_20x403"
                app:srcCompat="@drawable/tent_20x40" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>